--- a/Welcome_To_Colaboratory.ipynb
+++ b/Welcome_To_Colaboratory.ipynb
@@ -13,11 +13,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "importing "
+        "importing the libraries"
       ],
       "metadata": {
         "id": "u0_dNKnC9ymz"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "pean7sklRPo-"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
